# demo_send_file_via_grpc

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
proto/file_service/: mainflow.proto
src/: client.rs  server.rs
