[package]
name = "demo_grpc_send_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"


[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.10.2"
prost = "0.12.3"
log = "0.4.20"
env_logger = "0.10.1"


[build-dependencies]
tonic-build = { version="0.10.2", features = ["prost"] }


[profile.dev]
opt-level = 3
